# teoria-da-decisao

./: AHP.ipynb  ELECTRE.ipynb  OtimizacaoMonoObjetivo.ipynb  OtimizacaoMultiObjetivoEpsilonRestrito.ipynb  OtimizacaoMultiObjetivoSomaPonderada.ipynb  README.md  i5x25.mat  i5x25.xlsx  pyproject.toml
