[tool.poetry]
name = "teoria-da-decisao"
version = "0.1.0"
description = ""
authors = ["Matheus Brito Faria <matheus.brito000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.3"
matplotlib = "^3.5.1"
pandas = "^1.4.1"
jupyter = "^1.0.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
